--- a/portfolio/src/app/_components/header/header.component.html
+++ b/portfolio/src/app/_components/header/header.component.html
@@ -1,17 +1,12 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-<br>
-<header class="header">
-<nav class="flex flow-column gap align-item">
-    <br>
-    <img src="../../../assets/avatar.png" class="avatar" alt="">
-    <button onclick="pageAvaz('header-button')" routerLink="/home" class="header-button active" id="header-button"><i class="fa fa-home"></i></button>
-    <button onclick="pageAvaz('header-button')" routerLink="/projects" class="header-button" id="header-button"><i class="fa fa-calendar"></i></button>
-    <button onclick="pageAvaz('header-button')" routerLink="/education" class="header-button" id="header-button"><i class="fa fa-envelope"></i></button>
-    <button onclick="pageAvaz('header-button')" routerLink="/education" class="header-button" id="header-button"><i class="fa fa-comment"></i></button>
-    <button onclick="pageAvaz('header-button')" routerLink="/education" class="header-button" id="header-button"><i class="fa fa-user"></i></button>
 
-
+<header>
+<nav >
+    
+    <button  routerLink="/home" >Home</button>
+    <button  routerLink="/projects">Projects</button>
+    <button  routerLink="/education">Education</button>
+    <button routerLink="/calculator"> Calculator</button>
 </nav>
-
 </header>
+
 
