--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -1,9 +1,24 @@
-body ,html {
-    background-color: rgb(212, 212, 212);
+body,html {
     margin: 0;
+    background-color: black;
+    color: white;
+}
+
+.w-full {
+    width: 100%;
+}
+
+.flex {
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
+}
+
+.flex-col {
+    flex-flow: column;
+}
+
+.flex-row {
+    flex-flow: row;
+}
+.grow {
+    flex-grow: 1;
 }
