--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -8,12 +8,29 @@ body,html {
     width: 100%;
 }
 
+.w-half {
+    width: 50%;
+}
+.h-full {
+    height: 100%;
+}
+
 .flex {
     display: flex;
 }
 
+.items-center {
+    align-items: center;
+}
 .flex-col {
     flex-flow: column;
+}
+
+.justify-center {
+    justify-content: center;
+}
+.justify-between {
+    justify-content: space-between;
 }
 
 .flex-row {
@@ -22,3 +39,4 @@ body,html {
 .grow {
     flex-grow: 1;
 }
+
