--- a/portfolio/src/app/_pages/home/home.component.html
+++ b/portfolio/src/app/_pages/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="w-full landing flex items-center">
+<section class="w-full landing h-full flex items-center">
     <div class="h-full w-half  flex flex-col items-center justify-center">
         <h1>Ariyan Esmaeili</h1>
         <p class="w-half">
