--- a/portfolio/src/app/_components/header/header.component.html
+++ b/portfolio/src/app/_components/header/header.component.html
@@ -6,6 +6,8 @@
     <button  routerLink="/projects">Projects</button>
     <button  routerLink="/education">Education</button>
     <button routerLink="/calculator"> Calculator</button>
+    <button routerLink="/contact-us">Contact US</button>
+
 </nav>
 </header>
 
