--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -1,4 +1,15 @@
-body,html {
+
+::-webkit-scrollbar {
+    width: 0.6rem;
+    height: 0px;
+    background-color: purple;
+}
+
+::-webkit-scrollbar-thumb {
+    width: 0.6rem;
+    background-color: rgb(255, 142, 255);
+}
+body {
     margin: 0;
     background-color: black;
     color: white;
@@ -11,8 +22,31 @@ body,html {
 .w-half {
     width: 50%;
 }
+
+.w-90 {
+    width: 90%;
+}
+
+.w-98 {
+    width: 26rem;
+}
+
+
+
 .h-full {
     height: 100%;
+}
+
+.h-98 {
+    height: 23rem;
+}
+
+.h-3 {
+    height: 2rem;
+}
+
+.h-auto {
+    height: auto;
 }
 
 .flex {
@@ -22,12 +56,19 @@ body,html {
 .items-center {
     align-items: center;
 }
+
+.align-right {
+    align-items:flex-end;
+}
 .flex-col {
     flex-flow: column;
 }
 
 .justify-center {
     justify-content: center;
+}
+.justify-right {
+    justify-content: flex-end;
 }
 .justify-between {
     justify-content: space-between;
@@ -38,5 +79,117 @@ body,html {
 }
 .grow {
     flex-grow: 1;
+}
+
+.vazir-font {
+    font-family: "Vazirmatn", sans-serif;
+}
+
+.font-large {
+    font-size: 1.9ch;
+}
+
+.font-bold {
+    font-weight: bold;
+}
+
+.bg-white {
+    background-color: rgb(233, 233, 233);
+}
+
+.bg-gray {
+    background-color: rgb(199, 199, 199);
+}
+
+.text-black {
+    color: black;
+}
+
+
+
+.border-gray {
+    border: solid  0.19rem gray;
+}
+
+.border-b-gray {
+    border-bottom: solid  0.12rem white;
+}
+
+.b-none {
+    border: none;
+}
+
+.rounded-xl {
+    border-radius: 2rem;
+}
+
+.rounded-1 {
+    border-radius: 0.2rem;
+}
+
+.p-20 {
+    padding: 2rem;
+}
+
+.m-top-xl {
+    margin-top: 1rem;
+}
+
+.m-top-xl1 {
+    margin-top: 0.5rem;
+}
+
+.m-top-xl2 {
+    
+    margin-top: 0.9rem;
+}
+
+.align-right {
+    text-align: right;
+}
+
+.p-align-right::placeholder {
+    text-align: right;
+}
+
+.transition {
+    transition: all 0.6s;
+}
+
+.hover-transition:hover  {
+    transition: all 0.6s;
+}
+
+.hover-bg-purple:hover {
+    background: purple;
+}
+.focus-transition:focus  {
+    transition: all 0.6s;
+}
+.focus-out-none:focus {
+    outline: none;
+}
+
+
+
+.focus-border-p:focus  {
+    border: 0.12rem solid purple;
+}
+
+.focus-bg-wm:focus {
+    background-color: rgb(233, 233, 233);
+}
+
+.ov-hidden {
+    overflow: hidden;
+}
+
+.c-pointer {
+    cursor: pointer;
+}
+
+
+textarea {
+    resize: vertical;
 }
 
