--- a/portfolio/src/app/_pages/contact-us/contact-us.component.html
+++ b/portfolio/src/app/_pages/contact-us/contact-us.component.html
@@ -8,18 +8,18 @@
         <div class="w-full vazir-font  flex justify-center m-top-xl flex-col justify-center items-center">
             <div class="flex w-full justify-right align-rights align-right flex-col">
                 <label class="text-black font-med" for="name">نام</label>
-                <input type="text" placeholder="نام" id="name" name="name" class="align-right text-black vazir-font font-large p-align-right w-full m-top-xl1 h-3 b-none rounded-1 transition focus-out-none focus-transition focus-border-p focus-bg-wm" >
+                <input type="text" placeholder="نام" id="name" name="name" class="align-right text-black vazir-font font-large p-align-right w-full m-top-xl1 h-3 b-none rounded-1  focus-out-none focus-transition focus-border-p focus-bg-wm" >
             </div>
             <div class="flex w-full justify-right align-rights align-right flex-col m-top-xl2">
                 <label class="text-black font-med" for="email">آدرس ایمیل</label>
-                <input type="email" placeholder="ایمیل شما"id="email" name="email" class="align-right text-black vazir-font font-large p-align-right w-full m-top-xl1 h-3 b-none rounded-1 transition focus-out-none focus-transition focus-border-p focus-bg-wm" >
+                <input type="email" placeholder="ایمیل شما"id="email" name="email" class="align-right text-black vazir-font font-large p-align-right w-full m-top-xl1 h-3 b-none rounded-1  focus-out-none focus-transition focus-border-p focus-bg-wm" >
             </div>
             <div class="flex w-full justify-right align-rights align-right flex-col m-top-xl2">
                 <label class="text-black font-med" for="text">پیام شما</label>
-                <textarea placeholder="...پیام شما" rows="4" cols="50" aria-setsize="false" id="text" name="text" class="align-right  text-black vazir-font font-large p-align-right w-full m-top-xl1 b-none rounded-1 transition focus-out-none focus-transition focus-border-p focus-bg-wm" ></textarea>
+                <textarea placeholder="...پیام شما" rows="4" cols="50" aria-setsize="false" id="text" name="text" class="align-right  text-black vazir-font font-large p-align-right w-full m-top-xl1 b-none rounded-1  focus-out-none focus-transition focus-border-p focus-bg-wm" ></textarea>
             </div>
-            <div class="flex w-full justify-center align-rights align-center  m-top-xl1">
-                <input type="submit" value="ارسال پیام" class="w-full bg-gray rounded-1 h-3 vazir-font font-bold b-none c-pointer transition hover-transition hover-bg-purple">
+            <div class="flex w-full justify-center align-center m-top-xl1">
+                <input type="submit" value="ارسال پیام" class="w-full bg-gray rounded-1 h-3 vazir-font font-bold b-none c-pointer transition hover-transition hover-bg-purple hover-text-white">
             </div>
         </div>
 
