--- a/portfolio/src/app/_pages/contact-us/contact-us.component.html
+++ b/portfolio/src/app/_pages/contact-us/contact-us.component.html
@@ -16,7 +16,7 @@
             </div>
             <div class="flex w-full justify-right align-rights align-right flex-col m-top-xl2">
                 <label class="text-black font-med" for="text">پیام شما</label>
-                <textarea placeholder="...پیام شما" rows="4" cols="50" aria-setsize="false" id="text" name="text" class="align-right  text-black vazir-font font-large p-align-right w-full m-top-xl1 b-none rounded-1  focus-out-none focus-transition focus-border-p focus-bg-wm" ></textarea>
+                <textarea placeholder="...پیام شما" rows="4" cols="50" aria-setsize="false" id="text" name="text" class="align-right  text-black vazir-font font-large p-align-right w-full m-top-xl1 b-none rounded-1 transition  focus-out-none focus-transition focus-border-p focus-bg-wm" ></textarea>
             </div>
             <div class="flex w-full justify-center align-center m-top-xl1">
                 <input type="submit" value="ارسال پیام" class="w-full bg-gray rounded-1 h-3 vazir-font font-bold b-none c-pointer transition hover-transition hover-bg-purple hover-text-white">
